--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Ganesh\AppData\Local\Temp\testng-eclipse--768329302\testng-customsuite.xml</span>
+                    <span>C:\Users\Ganesh\AppData\Local\Temp\testng-eclipse--122639576\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,29 +103,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Run" class="method navigator-link" hash-for-method="runScenario(&quot;Successful Login with Valid Credentials DDT&quot;, &quot;Login&quot;)">runScenario("Successful Login with Valid Credentials DDT", "Login")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Run" class="method navigator-link" hash-for-method="runScenario(&quot;Add New Customer&quot;, &quot;Customers&quot;)">runScenario("Add New Customer", "Customers")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Run" class="method navigator-link" hash-for-method="runScenario(&quot;Successful Login with Valid Credentials&quot;, &quot;Login&quot;)">runScenario("Successful Login with Valid Credentials", "Login")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Run" class="method navigator-link" hash-for-method="runScenario(&quot;Successful Login with Valid Credentials DDT&quot;, &quot;Login&quot;)">runScenario("Successful Login with Valid Credentials DDT", "Login")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -145,16 +126,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Successful Login with Valid Credentials DDT&quot;, &quot;Login&quot;)">
-                  </a> <!-- runScenario("Successful Login with Valid Credentials DDT", "Login") -->
+                  <a name="runScenario(&quot;Add New Customer&quot;, &quot;Customers&quot;)">
+                  </a> <!-- runScenario("Add New Customer", "Customers") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Successful Login with Valid Credentials DDT","Login")</span>
+                  <span class="parameters">("Add New Customer","Customers")</span>
                   <div class="stack-trace">java.lang.AssertionError
 	at org.junit.Assert.fail(Assert.java:86)
 	at org.junit.Assert.assertTrue(Assert.java:41)
 	at org.junit.Assert.assertTrue(Assert.java:52)
-	at StepDefination.StepDef.page_title_should_be(StepDef.java:60)
-	at ✽.Page Title should be &quot;Dashboard / nopCommerce administration&quot;(file:///F:/Projects/my%20projects/BDDFramework-master/BDDFramework-master/./Features/LoginFeature.feature:19)
+	at StepDefination.StepDef.user_can_view_confirmation_message(StepDef.java:162)
+	at ✽.User can view confirmation message &quot;The new customer has been added successfully.&quot;(file:///F:/Projects/my%20projects/BDDFramework-master/BDDFramework-master/./Features/Customer.feature:19)
 
 </div> <!-- stack-trace -->
                   <em>
@@ -163,38 +144,10 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestRunner.Run</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Successful Login with Valid Credentials&quot;, &quot;Login&quot;)">
-                  </a> <!-- runScenario("Successful Login with Valid Credentials", "Login") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Successful Login with Valid Credentials","Login")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Successful Login with Valid Credentials DDT&quot;, &quot;Login&quot;)">
-                  </a> <!-- runScenario("Successful Login with Valid Credentials DDT", "Login") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Successful Login with Valid Credentials DDT","Login")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Ganesh\AppData\Local\Temp\testng-eclipse--768329302\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Ganesh\AppData\Local\Temp\testng-eclipse--122639576\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -251,24 +204,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'TestRunner.Run')
-data.setCell(0, 3, 58563);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'TestRunner.Run')
-data.setCell(1, 3, 13674);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'TestRunner.Run')
-data.setCell(2, 3, 4146);
+data.setCell(0, 3, 22305);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -296,26 +241,18 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">TestRunner.Run</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@3b4086c1)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@14d25b6e)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Successful Login with Valid Credentials", "Login")</span>
-                <span class="method-start">1458 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Successful Login with Valid Credentials DDT", "Login")</span>
-                <span class="method-start">60026 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">runScenario("Successful Login with Valid Credentials DDT", "Login")</span>
-                <span class="method-start">73703 ms</span>
+                <span class="method-name">runScenario("Add New Customer", "Customers")</span>
+                <span class="method-start">1232 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">77858 ms</span>
+                <span class="method-start">23569 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
